--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 dirs = "5.0.1"
+reqwest = {version = "0.11.24", features = ["blocking"] }
 serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 toml = "0.8.10"
