--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,15 @@ name = "trolley-launcher"
 version = "0.1.0"
 edition = "2021"
 
+[build-dependencies]
+tauri-build = { version = "1.5.1", features = [] }
+
 [dependencies]
 bzip2 = { version = "0.4.4", features = ["tokio"] }
 dirs = "5.0.1"
 reqwest = {version = "0.11.24", features = ["blocking"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+tauri = { version = "1.6.1", features = [] }
 tokio = "1.36.0"
 toml = "0.8.10"
